--- a/setup/admin/css/master.css
+++ b/setup/admin/css/master.css
@@ -100,10 +100,10 @@ main > section > .content {
   font-size: 1.2rem;
 }
 main > section > .content.success {
-    background: #7f8;
+  background: #7f8;
 }
 main > section > .content.error {
-    background: #f88;
+  background: #f88;
 }
 
 .project {
@@ -135,15 +135,15 @@ main > section > .content.error {
   opacity: 0.3;
 }
 main > section > form textarea {
-font-family: inherit;
-    width: 100%;
-    padding: 0 4px;
+  font-family: inherit;
+  width: 100%;
+  padding: 0 4px;
 }
 main > section > form input {
-    font-family: inherit;
-    width: 100%;
-    padding: 0 3px;
-    height: 2.5rem;
+  font-family: inherit;
+  width: 100%;
+  padding: 0 3px;
+  height: 2.5rem;
 }
 main > section > form input.submit {
   border: none;
@@ -157,4 +157,24 @@ main > section > form input.checkbox {
   height: 25px;
   margin: 0;
   vertical-align: bottom;
+}
+main > section > form select {
+  width: 100%;
+  font: inherit;
+  padding: 2px 1px;
+}
+
+.field > form input {
+  font-family: inherit;
+  padding: 0 4px;
+  vertical-align: top;
+}
+.field > form input#value {
+  width: calc(100% - 108px);
+  min-width: 200px;
+}
+.field > form textarea {
+  font: inherit;
+  width: calc(100% - 108px);
+  padding: 0 4px;
 }
