Adds ability to re-order projects
Admins can now re-order projects on the project page - this order affects
every time $PMS->getProjects() and $PMS->getPublicProjects() is called.

--- a/setup/admin/css/master.css
+++ b/setup/admin/css/master.css
@@ -178,3 +178,11 @@ main > section > form select {
   width: calc(100% - 108px);
   padding: 0 4px;
 }
+
+#reorderProjects input.order {
+  width: 3rem;
+  text-align: center;
+  height: 2rem;
+  margin-right: 6px;
+  margin-bottom: 1px;
+}
